# napflow

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  THIRD_PARTY_NOTICES  cliff.toml  pyproject.toml
.agents/skills/napflow-closeout/: SKILL.md
.agents/skills/napflow-closeout/agents/: openai.yaml
.claude/: settings.json
.claude/hooks/: session-end-log.sh
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: DECISIONS.md  EDGE_CASES.md  JOURNAL.md  PLAN.md  PRODUCT.md  RELEASING.md  REQUIREMENTS.md  embedding-workspace.md  napflow-engine-spec.md  napflow-flow-schema.md  napflow-workspace-manifest.md  perf-baselines.md  release-notes-preamble-v0.md  release-notes-v0.2.0.md  yaml-profile.md
docs/archive/: DECISIONS.md  EDGE_CASES.md  README.md  napflow-engine-spec.md  napflow-flow-schema.md  napflow-workspace-manifest.md  spec-deltas-2026-06-14.md  yaml-format-decision.md
src/napflow/: __init__.py
src/napflow/cli/: __init__.py  main.py  report.py  scaffold.py
src/napflow/core/: __init__.py  api.py  checker.py  engine.py  events.py  files.py  gitmeta.py  history_content.py  httpclient.py  loader.py  runprep.py  templating.py  worker.py  worker_main.py  workspace.py
src/napflow/core/models/: __init__.py  common.py  flow.py  manifest.py
src/napflow/server/: __init__.py  app.py  boundary.py  replay.py  runs.py  ws.py
tests/: conftest.py  test_architecture.py  test_cancellation_cleanup.py  test_checker.py  test_cli.py  test_distribution.py  test_engine.py  test_events.py  test_files.py  test_flow_merge.py  test_frames.py  test_frontend_notices.py  test_gitmeta.py  test_guards.py  test_history_content.py  test_json_schema.py  test_loader.py  test_models_flow.py  test_models_manifest.py  test_nodes.py  test_package.py  test_perf_baselines.py  test_public_api.py  test_python_node.py  test_release_gate.py  test_replay_api.py  test_request.py  test_roundtrip.py  test_run_cli.py  test_server.py  test_templating.py  test_v02_audit.py  test_workspace.py
tests/data/: commented_flow.yaml  create_until_ready.yaml  napflow.yaml
tests/data/golden/: create_until_ready.canonical.yaml
tools/: check_release_version.py  generate_frontend_notices.py  smoke_release_artifact.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.perf.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: allocate-port.ts  canvas.spec.ts  catalog-consumers.spec.ts  editing.spec.ts  helpers.ts  history.perf.spec.ts  run.spec.ts  serve.mjs  smoke.spec.ts  subflow.spec.ts  workspace-cleanup.mjs
ui/harness-tests/: allocate-port.test.ts  workspace-cleanup.test.ts
ui/src/: App.tsx  api.test.ts  api.ts  catalog.test.ts  catalog.ts  catalogConsumers.test.ts  colors.ts  form-coverage.json  forms.test.ts  forms.ts  graph.test.ts  graph.ts  identity.test.ts  identity.ts  nodeSemantics.test.ts  nodeSemantics.ts  persistence.test.ts  persistence.ts  run.css  runview.test.ts  runview.ts  store.test.ts  store.ts  theme.css  tidy.ts  uiChrome.ts
ui/src/components/: CodeEditor.tsx  CodeMirrorPane.tsx  CommandPalette.tsx  ConfigForm.tsx  ConnectHint.tsx  ConsoleButton.tsx  DataModal.tsx  DiagnosticsPanel.tsx  FlowList.tsx  FlowNode.tsx  Inspector.tsx  NodePalette.tsx  NodeSafetyForm.tsx  PortEditor.test.ts  PortEditor.tsx  RunControls.test.ts  RunControls.tsx  RunEdge.tsx  RunInspector.tsx  RunPanel.tsx  SaveStatus.tsx  StructuredRows.tsx  SubflowActions.tsx  TopLeftBar.tsx  TopRightBar.tsx  TrashZone.tsx
ui/src/store/: canvas.test.ts  canvas.ts  history.test.ts  history.ts  notices.ts  persistence.ts  runReplay.ts  types.ts
