[project]
name = "napflow"
# 0.1.0.devN — N bumps in the commit that completes a PLAN.md stage
# (S1 → dev1, S2 → dev2, ...); see docs/RELEASING.md
version = "0.1.0.dev4"
description = "Local-first, git-friendly, node-based flow editor and engine for API request/response processing"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "nickosh" }]
requires-python = ">=3.12"
keywords = ["api", "testing", "qa", "flow", "http"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "blacksheep>=2.6.3",
    "jinja2>=3.1",
    "niquests>=3.7",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "uvicorn>=0.30",
    "websockets>=16.0",
]

[project.urls]
Repository = "https://github.com/nickosh/napflow"
Changelog = "https://github.com/nickosh/napflow/blob/main/CHANGELOG.md"
Issues = "https://github.com/nickosh/napflow/issues"

[project.scripts]
napf = "napflow.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.12",
    "import-linter>=2.3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# The pre-built UI bundle is gitignored build output; `artifacts`
# forces it into sdist + wheel anyway (NFR-03: one wheel, no Node at
# runtime). CI builds the UI before `uv build` and gates on the bundle
# being present in the wheel.
[tool.hatch.build]
artifacts = ["src/napflow/server/static"]

[tool.hatch.build.targets.wheel]
packages = ["src/napflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PTH", # pathlib everywhere (NFR-02)
]

[tool.importlinter]
root_package = "napflow"

# NFR-01: core is the pytest/CI/codegen surface and must stay importable
# standalone.
[[tool.importlinter.contracts]]
name = "core imports nothing from cli/server/UI"
type = "forbidden"
source_modules = ["napflow.core"]
forbidden_modules = ["napflow.cli", "napflow.server"]

# server is a thin adapter over core; only cli may import server
[[tool.importlinter.contracts]]
name = "server does not import the cli"
type = "forbidden"
source_modules = ["napflow.server"]
forbidden_modules = ["napflow.cli"]
