[project]
name = "napflow"
# must equal the release tag minus the leading `v` — release.yml
# hard-gates on it; see docs/RELEASING.md
version = "0.2.0"
description = "Local-first flow editor and engine — visual flows that live in git, compose into bigger flows, and run headless in CI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES"]
authors = [{ name = "nickosh" }]
requires-python = ">=3.12"
keywords = ["api", "testing", "qa", "flow", "http"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "blacksheep>=2.6.3",
    "jinja2>=3.1",
    "niquests>=3.7",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "uvicorn>=0.30",
    "websockets>=16.0",
]

[project.urls]
Repository = "https://github.com/nickosh/napflow"
Changelog = "https://github.com/nickosh/napflow/blob/main/CHANGELOG.md"
Issues = "https://github.com/nickosh/napflow/issues"

[project.scripts]
napf = "napflow.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.12",
    "import-linter>=2.3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# The pre-built UI bundle is gitignored build output; `artifacts` forces it
# into release-built sdists and wheels anyway (NFR-03: one wheel, no Node for
# users or sdist consumers). Raw-checkout/VCS installs are unsupported. The
# release process builds the UI before packaging; the focused artifact smoke
# verifies a wheel built from that sdist can execute and serve the real bundle.
[tool.hatch.build]
artifacts = ["src/napflow/server/static"]

[tool.hatch.build.targets.wheel]
packages = ["src/napflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The perf baselines (NFR-18) are opt-in: excluded from ordinary runs and
# CI, run explicitly with `-m perf` (the last -m on the command line wins).
addopts = "-m 'not perf'"
markers = [
    "perf: opt-in performance baselines (NFR-18), excluded from default CI",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PTH", # pathlib everywhere (NFR-02)
]

[tool.importlinter]
root_package = "napflow"

# NFR-01: core is the pytest/CI/codegen surface and must stay importable
# standalone.
[[tool.importlinter.contracts]]
name = "core imports nothing from cli/server/UI"
type = "forbidden"
source_modules = ["napflow.core"]
forbidden_modules = ["napflow.cli", "napflow.server"]

# server is a thin adapter over core; only cli may import server
[[tool.importlinter.contracts]]
name = "server does not import the cli"
type = "forbidden"
source_modules = ["napflow.server"]
forbidden_modules = ["napflow.cli"]
